--- a/docs/5g-on-helium/mining-5g.mdx
+++ b/docs/5g-on-helium/mining-5g.mdx
@@ -93,7 +93,7 @@ HNT issuance halvenings. The first halving will occur on August 1, 2023 to align
 and will continue on a 2 year cycle afterward. This creates a "stub period" as defined by
 [HIP 53: Mobile subDAO](https://github.com/helium/HIP/blob/main/0053-mobile-dao.md) which will begin
 when normal emissions of MOBILE tokens begins (and MOBILE can be redeemed by HNT in the subDAO's
-treasury). The date for this is currently TBD and dependent on core developers impelementing the HNT
+treasury). The date for this is currently TBD and dependent on core developers implementing the HNT
 token treasury and redemption transactions on chain. This is defined as Phase 2 of
 [HIP 51: Helium DAO](https://github.com/helium/HIP/blob/main/0051-helium-dao.md) for all new
 subDAOs.
