--- a/docs/5g-on-helium/mining-5g.mdx
+++ b/docs/5g-on-helium/mining-5g.mdx
@@ -160,7 +160,7 @@ In this example, the Total Rewards Units per epoch is 2,000 and the ratios are a
 
 ### Earnings per Small Cell Radio
 
-Each Small Cell Radio is allocated its rewards based on it's reward weight.
+Each Small Cell Radio is allocated its rewards based on the reward weight of the model.
 
 > Small Cell Reward = Epoch Rewards x Model Reward Weight / Total Reward Units
 
