follow newline convention

--- a/docs/5g-on-helium/mining-5g.mdx
+++ b/docs/5g-on-helium/mining-5g.mdx
@@ -146,7 +146,8 @@ following (the below numbers are examples and may not reflect actual deployed 5G
 
 ### Total Rewards Units for Epoch
 
-Calculate the Total Reward Units for a given epoch, by using the reward weight for every small cell radio model.
+Calculate the Total Reward Units for a given epoch, by using the reward weight for every small
+cell radio model.
 
 In this example, the Total Rewards Units per epoch is 2,000 and the ratios are as follows:
 
