--- a/docs/5g-on-helium/5g-on-helium.mdx
+++ b/docs/5g-on-helium/5g-on-helium.mdx
@@ -11,7 +11,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 
 # 5G On Helium
 
-Today all mobile networks are built top-down by service providers (e.g., AT&T and Verizon in the
+Today all mobile networks are built top-down by service providers (e.g., AT&T and Verizon in The
 United States). Future networks will likely be a hybrid of large-scaled operators and people-owned
 5G Hotspots due to demands of consumer behavior (higher bandwidth and lower latency requirements)
 and the physics of wireless radio. More data on the wireless network requires higher frequency
@@ -73,8 +73,8 @@ Installing an Indoor Small Cell Radio outdoors is not recommended as they are no
 With the passing of
 [HIP 51: Helium DAOs](https://github.com/helium/HIP/blob/main/0051-helium-dao.md) a general
 structure for onboarding new Decentralized Network Protocols (DNPs) to the broader Helium Network
-was created. The Helium Mobile DAO with 5G Hotspots are the first step in the evolution of the
-Helium ecosystem.
+was created. The Helium Mobile DAO with 5G Hotspots is the first step in the evolution of the Helium
+ecosystem.
 
 ## Helium 5G Rollout
 
