CBRS Small Cell Model swapped for commerical names

--- a/docs/5g-on-helium/mining-5g.mdx
+++ b/docs/5g-on-helium/mining-5g.mdx
@@ -113,13 +113,14 @@ All properly installed and registered 5G Hotspots will earn rewards for particip
 Network. A rewards unit multiple is applied to the various Small Cell Radio models based on whether
 they are indoor or outdoor, as well as their power output, as follows:
 
-| Model           | Reward Weight | Small Cell Radio Type |
-| :-------------- | :-----------: | :-------------------- |
-| Nova 436H       |     2.0x      | High Power Outdoor    |
-| Nova 430i       |     1.5x      | Outdoor               |
-| Sercomm Outdoor |     1.5x      | Outdoor               |
-| Sercomm Indoor  |     1.0x      | Indoor                |
-| Neutrino 430    |     1.0x      | Indoor                |
+| Small Cell Radio Model      | Reward Weight | Small Cell Radio Type |
+| :-------------------------- | :-----------: | :-------------------- |
+| Baicells Nova 436H          |     2.0x      | High-Power Outdoor    |
+| Baicells Nova 430i          |     1.5x      | Outdoor               |
+| MosoLabs Outdoor Small Cell |     1.5x      | Outdoor               |
+| FreedomFi Indoor Small Cell |     1.0x      | Indoor                |
+| MosoLabs Indoor Small Cell  |     1.0x      | Indoor                |
+| Baicells Neutrino 430H      |     1.0x      | Indoor                |
 
 Individual rewards per period are calculated as a proportion of the total weighted reward units.
 
