cbrs radio info moved to additional page

--- a/docs/5g-on-helium/mining-5g.mdx
+++ b/docs/5g-on-helium/mining-5g.mdx
@@ -45,7 +45,7 @@ fines and/or criminal penalties.
 :::
 
 Once the 5G Hotspot is onboarded and a Small Cell Radio is physically installed, the Small Cell
-Radio will automatically initialize and aquire a GPS lock. Once that is complete, the Small Cell
+Radio will automatically initialize and acquire a GPS lock. Once that is complete, the Small Cell
 Radio dashboard appears under the "Radio Dashboard" tab on the local IP address of the 5G Hotspot.
 
 > [http://freedomfi-gateway.local/](http://freedomfi-gateway.local/)
@@ -89,7 +89,7 @@ activities on its own and will be rewarded for maintaining a valid connection to
 ## Emissions Curve
 
 There will be a max supply of 250B MOBILE with issuance halvenings of every 2 years aligned with the
-HNT issuance halvenings. The first halving will occur on August 1, 2023 to align with HNT halving
+HNT issuance halvenings. The first halving will occur on August 1, 2023, to align with HNT halving
 and will continue on a 2-year cycle afterward. This creates a "stub period" as defined by
 [HIP 53: Mobile subDAO](https://github.com/helium/HIP/blob/main/0053-mobile-dao.md) which will begin
 when normal emissions of MOBILE tokens begin (and MOBILE can be redeemed by HNT in the subDAO's
