rename pages and shuffle order of CBRS info page

--- a/docs/5g-on-helium/mining-5g.mdx
+++ b/docs/5g-on-helium/mining-5g.mdx
@@ -1,7 +1,7 @@
 ---
 id: mining-5g
 hide_title: true
-sidebar_label: 5G Mining & Rewards
+sidebar_label: Mine MOBILE
 sidebar_class_name: new
 slug: /5g-on-helium/mining-5g
 ---
