--- a/docs/5g-on-helium/cbrs-radios.mdx
+++ b/docs/5g-on-helium/cbrs-radios.mdx
@@ -56,23 +56,7 @@ smaller, localized area of 5G coverage.
 Indoor Small Cell Radios are physically smaller radios and can be installed at any height.
 Installing an Indoor Small Cell Radio outdoors is not recommended as they are not weather resistant.
 
-## CBRS Radio Troubleshooting
-
-### The 5G Statistics Tab on Explorer
-
-5G Hotspots with attached new tab with status, active or inactive,
-
-Small Cell Status -> A 5G Hotspot is active if it has a heartbeat in the last 10 minutes.
-
-- `Inactive`: could be for several reasons
-- `Active`: all is well Small Cell Location -> `Indoor` or `Outdoor`
-
-inactive means no heartbeat in the previous 10 minutes
-
-1. what does inactive mean?
-2. where's my other small cell radio attached to the same hotspot?
-
-### Using Multiple Small Cell Radios with a 5G Hotspot
+## Using Multiple Small Cell Radios
 
 A single 5G Hotspot can support multiple Small Cell Radios but requires an additional network
 switch. A soft limit to consider is 7 Small Cell Radios to one 5G Hotspot, however, this limit is
@@ -80,31 +64,57 @@ only theoretical as the true limiting factor is bandwidth saturation. All 5G Hot
 a 1 Gbps Network Interface Card (NIC), the throughput of all the radios combined is limited to 1
 Gbps or your internet speed, whichever is lower.
 
+## The 5G Statistics Tab on Explorer
+
+The [Helium Explorer](https://explorer.helium.com/) will include an additional tab for all 5G
+Hotspots with active Small Cell Radios, "5G Statistics"
+
+This tab includes `Small Cell Status` and `Small Cell Location` widgets to describe the active
+status and Small Cell Radio Type respectively.
+
+Small Cell Status will be `Active` if the Small Cell has broadcast a `heartbeat` to the SAS in the
+past 10 minutes. Small Cell Location will be either `Indoor` or `Outdoor` depending on the Small
+Cell Radio type.
+
+:::note 5G Hotspots with more than one Small Cell Radio
+
+Small Cell Status will reflect all attached Small Cell Radios in aggregate, if any connected Small
+Cell Radio has broadcast a `heartbeat` to the SAS, the Status will be `Active` regardless of the
+actual status of any other connected Small Cell Radio.
+
+Refer to the 5G Hotspot dashboard for information on each connected Small Cell Radio
+[http://freedomfi-gateway.local/](http://freedomfi-gateway.local/)
+
+:::
+
+## Troubleshooting
+
 ### Spectrum Access on the 5G Hotspot Dashboard
 
-The `Spectrum Access` Status
+The Spectrum Access status will be in one of three states. It is not uncommon to see this status
+change frequently.
 
-<div class="container" style={{ padding: 0, paddingTop: 100 }}>
+<div class="container" style={{ padding: 0, paddingTop: 0 }}>
   <div class="row">
-    <div class="col col--4" style={{ marginBottom: 100 }}>
-      <img className="homeicon" src={useBaseUrl('img/5g-on-helium/sas-success-small.png')} />
+    <div class="col col--4" style={{ marginBottom: 0 }}>
       <h3>All Good</h3>
+      <img className="homeicon" src={useBaseUrl('img/5g-on-helium/sas-success-small.png')} />
       <p>
         The Small Cell Radio has been granted Spectrum Access by the SAS and is providing 5G
         coverage.
       </p>
     </div>
-    <div class="col col--4" style={{ marginBottom: 100 }}>
-      <img className="homeicon" src={useBaseUrl('img/5g-on-helium/sas-connected-small.png')} />
+    <div class="col col--4" style={{ marginBottom: 0 }}>
       <h3>Recent Connection</h3>
+      <img className="homeicon" src={useBaseUrl('img/5g-on-helium/sas-connected-small.png')} />
       <p>
-        The Small Cell Radio Spectrum Access was recently `None` and is comming back online, this
-        status should be transitory.
+        The Small Cell Radio Spectrum Access was recently <code>None</code> and is comming back
+        online, this status should be transitory.
       </p>
     </div>
-    <div class="col col--4" style={{ marginBottom: 100 }}>
-      <img className="homeicon" src={useBaseUrl('img/5g-on-helium/sas-none-small.png')} />
+    <div class="col col--4" style={{ marginBottom: 0 }}>
       <h3>Disconnected</h3>
+      <img className="homeicon" src={useBaseUrl('img/5g-on-helium/sas-none-small.png')} />
       <p>The CBRS Spectrum access service is disabled to the Small Cell Radio. </p>
       <p>See below for more information.</p>
     </div>
