genesis period explainer text

--- a/docs/5g-on-helium/mining-5g.mdx
+++ b/docs/5g-on-helium/mining-5g.mdx
@@ -80,6 +80,9 @@ During the Genesis Period, 5G Hotspots will earn MOBILE by reporting their statu
 an automatic process of reporting to the Helium Blockchain that the Small Cell Radio is online and
 registered with the SAS.
 
+The Genesis Period begins when MOBILE mining starts and ends once the Mobile subDAO Treasury is
+established.
+
 :::
 
 Once a 5G Hotspot is completely deployed and fully synced with the Helium Blockchain, you as the
