--- a/docs/5g-on-helium/5g-on-helium.mdx
+++ b/docs/5g-on-helium/5g-on-helium.mdx
@@ -11,7 +11,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 
 # 5G On Helium
 
-Today all mobile networks are built top-down by service providers (e.g., AT&T and Verizon in The
+Today all mobile networks are built top-down by service providers (e.g., AT&T and Verizon in the
 United States). Future networks will likely be a hybrid of large-scaled operators and people-owned
 5G Hotspots due to demands of consumer behavior (higher bandwidth and lower latency requirements)
 and the physics of wireless radio. More data on the wireless network requires higher frequency
