Apply suggestions from code review
Co-authored-by: Coco Tang <coco@helium.com>

--- a/docs/5g-on-helium/cbrs-radios.mdx
+++ b/docs/5g-on-helium/cbrs-radios.mdx
@@ -43,7 +43,7 @@ Spectrum Access System (SAS) to operate. Please be sure to evaluate your locatio
 install these Small Cell Radios, and consider hiring a professional to ensure your installation is
 secure and meets all regulatory requirements.
 
-SAS registration is expected to be completed within 5 days of submission, Hotspot Owners will be
+SAS registration is expected to be completed within 5 days of submission. Hotspot Owners will be
 contacted via email with a confirmation of successful registration, or with a rejection reply and an
 explanation of what needs to be corrected.
 
@@ -54,7 +54,7 @@ bars, grocery stores, etc. Indoor Small Cell Radios are generally easier to inst
 smaller, localized area of 5G coverage.
 
 Indoor Small Cell Radios are physically smaller radios and can be installed at any height.
-Installing an Indoor Small Cell Radio outdoors is not recommended as they are not weather resistant.
+**Installing an Indoor Small Cell Radio outdoors is not recommended as they are not weather resistant.**
 
 ## Using Multiple Small Cell Radios
 
@@ -82,7 +82,7 @@ Small Cell Status will reflect all attached Small Cell Radios in aggregate, if a
 Cell Radio has broadcast a `heartbeat` to the SAS, the Status will be `Active` regardless of the
 actual status of any other connected Small Cell Radio.
 
-Refer to the 5G Hotspot dashboard for information on each connected Small Cell Radio
+Refer to the 5G Hotspot dashboard for information on each connected Small Cell Radio (local network connection only)
 [http://freedomfi-gateway.local/](http://freedomfi-gateway.local/)
 
 :::
@@ -158,5 +158,5 @@ Radio's location when requesting approval to transmit from the FCC-regulated Spe
 
 Small Cell Radios will need to be placed somewhere that allows the GPS antenna to be in a location
 with good GPS reception (i.e. near a window). Indoor Small Cell Radios are shipped with an external
-GPS antenna that can be positioned indipendently while Outdoor Small Cell Radios have the GPS antena
+GPS antenna that can be positioned independently while Outdoor Small Cell Radios have the GPS antenna
 integrated into the body directly.
