--- a/docs/5g-on-helium/cbrs-radios.mdx
+++ b/docs/5g-on-helium/cbrs-radios.mdx
@@ -39,7 +39,7 @@ endure the elements. Outdoor Small Cell Radios create a larger area of 5G covera
 bit more planning when installing and maintaining.
 
 Outdoor Small Cell Radios require installation above ground level and require registration with the
-Spectrum Access System (SAS) to operate. Please be sure to evaluate your locations and ability to
+Spectrum Access System (SAS) to operate. Please be sure to evaluate your site location and ability to
 install these Small Cell Radios, and consider hiring a professional to ensure your installation is
 secure and meets all regulatory requirements.
 
