suggested edits and simplified DPA event language

--- a/docs/5g-on-helium/cbrs-radios.mdx
+++ b/docs/5g-on-helium/cbrs-radios.mdx
@@ -39,9 +39,9 @@ endure the elements. Outdoor Small Cell Radios create a larger area of 5G covera
 bit more planning when installing and maintaining.
 
 Outdoor Small Cell Radios require installation above ground level and require registration with the
-Spectrum Access System (SAS) to operate. Please be sure to evaluate your site location and ability to
-install these Small Cell Radios, and consider hiring a professional to ensure your installation is
-secure and meets all regulatory requirements.
+Spectrum Access System (SAS) to operate. Please be sure to evaluate your site location and ability
+to install these Small Cell Radios, and consider hiring a professional to ensure your installation
+is secure and meets all regulatory requirements.
 
 SAS registration is expected to be completed within 5 days of submission. Hotspot Owners will be
 contacted via email with a confirmation of successful registration, or with a rejection reply and an
@@ -54,7 +54,8 @@ bars, grocery stores, etc. Indoor Small Cell Radios are generally easier to inst
 smaller, localized area of 5G coverage.
 
 Indoor Small Cell Radios are physically smaller radios and can be installed at any height.
-**Installing an Indoor Small Cell Radio outdoors is not recommended as they are not weather resistant.**
+**Installing an Indoor Small Cell Radio outdoors is not recommended as they are not weather
+resistant.**
 
 ## Using Multiple Small Cell Radios
 
@@ -82,8 +83,8 @@ Small Cell Status will reflect all attached Small Cell Radios in aggregate, if a
 Cell Radio has broadcast a `heartbeat` to the SAS, the Status will be `Active` regardless of the
 actual status of any other connected Small Cell Radio.
 
-Refer to the 5G Hotspot dashboard for information on each connected Small Cell Radio (local network connection only)
-[http://freedomfi-gateway.local/](http://freedomfi-gateway.local/)
+Refer to the 5G Hotspot dashboard for information on each connected Small Cell Radio (local network
+connection only) [http://freedomfi-gateway.local/](http://freedomfi-gateway.local/)
 
 :::
 
@@ -124,12 +125,11 @@ change frequently.
 ### Spectrum Access `None` Status
 
 A Dynamic Protection Area (DPA) is a geographic region where incumbents (Tier 1 users) get
-protection from PAL and GAA interference. Most DPAs are dynamically activated and deactivated based
-on incumbent activity. The SAS may need to suspend some or all nearby grants from transmitting so
-that interference does not exceed interference margins for each incumbent.
+protection from PAL and GAA interference.
 
 During a DPA event, all Small Cell Radios in the given DPA Neighborhood are disabled by the SAS.
-There is nothing that you need or can do in these scenarios.
+There is nothing that you need or can do in these scenarios. The SAS will automatically re-grant
+Spectrum Access once the DPA event has concluded.
 
 A message similar to the following may also be present:
 
@@ -158,5 +158,5 @@ Radio's location when requesting approval to transmit from the FCC-regulated Spe
 
 Small Cell Radios will need to be placed somewhere that allows the GPS antenna to be in a location
 with good GPS reception (i.e. near a window). Indoor Small Cell Radios are shipped with an external
-GPS antenna that can be positioned independently while Outdoor Small Cell Radios have the GPS antenna
-integrated into the body directly.
+GPS antenna that can be positioned independently while Outdoor Small Cell Radios have the GPS
+antenna integrated into the body directly.
