--- a/docs/use-the-network/run-a-network-server/buy-an-oui.mdx
+++ b/docs/use-the-network/run-a-network-server/buy-an-oui.mdx
@@ -96,7 +96,7 @@ Offers only contain:
 
 :::info
 
-Note that a Console organisation is only ever charged when a packet is received and properly identified. Only Router's balance is charged during the offer / purchase process.
+Note that a Console Organization is only ever charged when a packet is received and properly identified. Only Router's balance is charged during the offer / purchase process.
 
 ::: 
 
