demo DPA region map

--- a/docs/5g-on-helium/cbrs-radios.mdx
+++ b/docs/5g-on-helium/cbrs-radios.mdx
@@ -139,7 +139,16 @@ Suspension can last from hours to days for DPA Events. Contact support if you ha
 more than 48hrs. This is more prevalent if your location is within 150km of the DPA Regions.
 ```
 
-:::tip DPA Neighborhood Regions
+### DPA Neighborhood Regions
+
+<div class="maps_iframe">
+  <iframe
+    src="https://www.google.com/maps/d/embed?mid=12A0vLwlriEfcX98azV1nJbHIs2OPwO4&hl=en&ehbc=2E312F"
+    frameborder="0"
+  ></iframe>
+</div>
+
+:::tip
 
 Further information and maps of the DPA Neighborhoods in The United States and territories can be
 found here:
